# BlueSentinel-Log-Analyzer

./: .gitignore  Dockerfile  README.md  alerts_report.txt  blue_sentinel  dashboard.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
blue_sentinel/: __init__.py  anomaly_detector.py  summarizer.py
scripts/: analyze_logs.sh  demo_attack_graph.py
src/bluesentinel/: __init__.py  types.py
src/bluesentinel/api/: __init__.py  app.py  schemas.py
src/bluesentinel/cli/: __init__.py  __main__.py
src/bluesentinel/detectors/: __init__.py  base.py  deeplog.py  isolation_forest.py  logbert.py
src/bluesentinel/enrichment/: __init__.py  mitre.py
src/bluesentinel/evaluation/: __init__.py  datasets.py  harness.py  metrics.py
src/bluesentinel/graph/: __init__.py  engine.py  kill_chain.py
src/bluesentinel/legacy/: log_parser.py  summarizer.py
src/bluesentinel/parsers/: __init__.py  base.py  drain.py  syslog.py
src/bluesentinel/rules/: __init__.py  engine.py
src/bluesentinel/rules/builtin/: brute_force_ssh.yml  firewall_disable.yml  log_tampering.yml  new_user_account.yml  privilege_escalation_sudo.yml
templates/: dashboard.html
tests/: test_attack_graph.py  test_detector.py  test_metrics.py  test_mitre.py  test_parser.py  test_sigma_engine.py
web/: package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/demo/: page.tsx
web/src/lib/: attack-graph.ts  mitre.ts  parser.ts  samples.ts  sigma.ts  types.ts
